--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,29 @@
+awsebcli==3.7.6
+blessed==1.9.5
+botocore==1.4.12
+cement==2.8.2
+colorama==0.3.7
 Django==1.9.4
 django-bootstrap3==7.0.0
 django-extra-views==0.7.1
 django-formtools==1.0
 django-nested-formset==0.1.4
 django-stdimage==2.3.2
+docker-py==1.7.2
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.12
+jmespath==0.9.0
+pathspec==0.3.4
 Pillow==3.1.1
 progressbar2==3.6.2
+python-dateutil==2.5.2
+PyYAML==3.11
+requests==2.9.1
+semantic-version==2.5.0
 six==1.10.0
+stripe==1.32.2
+texttable==0.8.4
+wcwidth==0.1.6
+websocket-client==0.37.0
 wheel==0.26.0
