--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 .direnv/
 .envrc
-server/__pycache__/
-server_buddy/__pycache__/
-server/migrations/__pycache__/
+server/__pycache__/*
+server_buddy/__pycache__/*
+server/migrations/__pycache__/*
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+.ebextensions/*
