--- a/.ebextensions/01-python.config
+++ b/.ebextensions/01-python.config
@@ -4,3 +4,7 @@ packages:
     libpng-devel: []
     freetype-devel: []
     postgresql94-devel: []
+
+container_commands:
+  collectstatic:
+    command: "django-admin.py collectstatic --noinput"
