--- a/.ebextensions/01-python.config
+++ b/.ebextensions/01-python.config
@@ -7,4 +7,4 @@ packages:
 
 container_commands:
   collectstatic:
-    command: "django-admin.py collectstatic --noinput"
+    command: "./manage.py collectstatic --noinput"
