--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ jmespath==0.9.0
 pathspec==0.3.4
 Pillow==3.1.1
 progressbar2==3.6.2
+psycopg2==2.6.1
 python-dateutil==2.5.2
 PyYAML==3.11
 requests==2.9.1
