--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .direnv/
 .envrc
+__pycache__/*
 server/__pycache__/*
 server_buddy/__pycache__/*
 server/migrations/__pycache__/*
+server_buddy/stored_keys.py
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
