--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 awsebcli==3.7.6
 blessed==1.9.5
+boto==2.39.0
 botocore==1.4.12
 cement==2.8.2
 colorama==0.3.7
@@ -9,6 +10,7 @@ django-extra-views==0.7.1
 django-formtools==1.0
 django-nested-formset==0.1.4
 django-stdimage==2.3.2
+django-storages==1.4.1
 docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
