--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ server_buddy/stored_keys.py
 stored_keys.py
 static/.DS_Store
 .DS_Store
+db.sqlite3
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
